CSS/moddataStyles.css
body {
    font-size: 90%;
    background-color: rgb(235, 235, 235);
}
.dtWrap {
    width: 935px;
    padding-bottom: 5px;
    float: left;
    display: none;
}
.colorTblWrap {
    width: 935px;
    position: relative;
}
.colorTbl {
    overflow: auto;
}
#moddata {
    text-align: center;
}
#moddata_info {
    position: fixed;
    bottom: 0;
    right: 0;
    padding-right: 10px;
}
tfoot input {
    width: 100%;
}
.assigned {
    table-layout: fixed;
    border-collapse: collapse;
    text-align: center;
}
.assigned td {
    border-top: 1px solid #ddd;
}
.assigned tbody {
    display: none;
}
.userInput {
    float: right;
    width: 230px;
}
.tblBtns {
    float: right;
}
/* Container for radio assignment buttons for colored tables */
.assignBtnWrap {
    padding-top: 40px;
    padding-right: 5px;
    float: left;
    display: none;
}
/* Radio buttons to select which colored table to assign the mod to */
.assgnBtn1 {
    padding-top: 5px;
    padding-bottom: 4px;
    width: 25px;
    background-color: lightblue;
}
.assgnBtn2 {
    padding-top: 5px;
    padding-bottom: 4px;
    width: 25px;
    background-color: rgba(144, 238, 144, 0.788);
}
.assgnBtn3 {
    padding-top: 5px;
    padding-bottom: 4px;
    width: 25px;
    background-color: rgba(255, 166, 0, 0.850);
}
.assgnBtn4 {
    padding-top: 5px;
    padding-bottom: 4px;
    width: 25px;
    background-color: rgba(189, 96, 189, 0.788);
}
.assgnBtn5 {
    padding-top: 5px;
    padding-bottom: 4px;
    width: 25px;
    background-color:  rgba(245, 245, 113, 0.780);
}

/* squad member table settings */
#squadMembr0 {
    background-color: lightblue;
}
#squadMembr1 {
    background-color: rgba(144, 238, 144, 0.788);
}
#squadMembr2 {
    background-color: rgba(255, 166, 0, 0.850);
}
#squadMembr3 {
    background-color: rgba(189, 96, 189, 0.788);
}
#squadMembr4 {
    background-color: rgba(245, 245, 113, 0.780);
}

/* Autocomplete Styling */
/* Keeps the auto complete options from showing up in the DOM */
.ui-helper-hidden-accessible {
    display:none !important;
}
/* Colors the autocomplete text */
.ui-autocomplete {
    background-color: rgb(22, 21, 21);
    color: whitesmoke;
    width: 150px;
    clear:left;
}
/* autocomplete hover color */
.ui-autocomplete .ui-menu-item-wrapper:hover {
    background-color: rgba(0, 128, 0, 0.562);
}

